--- a/src/popup/index.css
+++ b/src/popup/index.css
@@ -8,8 +8,10 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #213547;
+  background-color: #ffffff;
+  /* color: rgba(255, 255, 255, 0.87);
+  background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -18,6 +20,7 @@
   -webkit-text-size-adjust: 100%;
 }
 
+/* 
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -26,7 +29,7 @@
   a:hover {
     color: #747bff;
   }
-}
+} */
 
 body {
   min-width: 20rem;
